bdr.BDR.scala.error
Erreur de compilation :
BDR:8: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mess="R"){
            ^BDR:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mess="L"){
            ^BDR:16: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mess="I"){
            ^BDR:19: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mess="A"){
            ^BDR:22: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mess="B"){
            ^BDR:25: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mess="C"){
            ^BDR:28: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mess="E"){
            ^BDR:31: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mess="Y"){
            ^BDR:34: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mess="X"){
            ^